# Yolo-cvdnn-Inference

./: .gitignore  CMakeLists.txt  README.md  README_ZH.md  build_rk3566.sh
.cache/clangd/index/: main.cpp.9BD5324D28FF714C.idx  yolo.cpp.7888DCA254F6DCF4.idx  yolo.h.A519F50F7C992D66.idx  yolov7.cpp.99D9C45F1FA292DB.idx  yolov7.h.98B2A8218144BE6B.idx
include/: camera.h  iyolo.h  quantization.h  timer.h  utils.h  yolo.h  yolo11.h  yolov5-lite.h  yolov5.h  yolov7.h  yolov7_dnn.h
scripts/: build_rk3566.sh  optimize_graph.py  optimize_graph.sh  plot_fps.py  run.sh
src/: camera.cpp  main.cpp  yolo.cpp  yolo11.cpp  yolov5-lite.cpp  yolov5.cpp  yolov7.cpp  yolov7_dnn.cpp
